--- a/.travis.yml
+++ b/.travis.yml
@@ -179,13 +179,12 @@ script:
   - if [ "${CXX}" != "" ]; then (travis_wait make all); fi
   - if [ "${CHECK}" != "" ]; then (travis_wait make check); fi
   - if [ "${TRAVIS_BRANCH}" == "cpp14" ] && [ "${DOCUMENTATION}" != "" ]; then (
-    git clone --quiet --recursive --depth=1 --single-branch https://github.com/boostorg/boost.git
-    && cd boost && ./bootstrap.sh && ./b2 headers && mkdir libs/di && cp -r ../Makefile ../doc ../example ../include libs/di
-    && cd libs/di && make doc && cd doc && git clone https://github.com/boost-experimental/di.git
+    pip install --user travis https://github.com/mkdocs/mkdocs/archive/0.15.0.zip
+    && make doc && git clone https://github.com/boost-experimental/di.git
     && cd di && git checkout -b gh-pages -t origin/gh-pages && git reset --hard
-    && rm -rf cpp14/boost/libs/di/doc/html && cp -r ../html cpp14/boost/libs/di/doc
-    && git add -A . && git commit -am "update" && git push --force --quiet
-    "https://${GH_TOKEN}@github.com/boost-experimental/di"); fi
+    && rm -rf cpp14/boost/libs/di/doc/html/* && cp -r ../doc/site/* cpp14/boost/libs/di/doc/html
+    && git add -A . && git commit -am "doc update" && git push --force --quiet
+    "https://${GH_TOKEN}@github.com/boost-experimental/msm-lite.git"); fi
 
 after_success:
   - if [ "${TRAVIS_BRANCH}" == "cpp14" ] && [ "${BENCHMARK}" != "" ]; then (
