[travis] fix for cmake and doc

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -6,7 +6,7 @@
 #
 function(example example)
     string(REPLACE "/" "_" tmp ${example})
-    add_executable(example.${tmp} ${CMAKE_CURRENT_LIST_DIR}/${example}.cpp)
+    add_executable(example.${tmp} ${CMAKE_CURRENT_LIST_DIR}/${example})
     add_test(example.${tmp} example.${tmp})
 endfunction()
 
@@ -38,33 +38,33 @@ example(performance/create_named_type)
 example(performance/create_type_with_bound_instance)
 example(performance/create_type_without_bindings)
 
-example(quick_user_guide/annotated_constructor_injection.cpp)
-example(quick_user_guide/annotated_constructor_injection_with_constructor_definition.cpp)
-example(quick_user_guide/annotated_constructor_injection_with_ctor_traits.cpp)
-example(quick_user_guide/annoteded_constructor_injection_with_the_same_names.cpp)
-example(quick_user_guide/bind_cross_platform.cpp)
-example(quick_user_guide/bind_deduce_type_to_value.cpp)
-example(quick_user_guide/bind_interface_to_implementation.cpp)
-example(quick_user_guide/bind_multiple_interfaces.cpp)
-example(quick_user_guide/bind_type_to_compile_time_value.cpp)
-example(quick_user_guide/bind_type_to_value.cpp)
-example(quick_user_guide/constructor_injection_aggregate.cpp)
-example(quick_user_guide/constructor_injection_ambigious_constructors_via_ctor_traits.cpp)
-example(quick_user_guide/constructor_injection_ambigious_constructors_via_inject.cpp)
-example(quick_user_guide/constructor_injection_ambigious_constructors_via_inject_traits.cpp)
-example(quick_user_guide/constructor_injection_direct.cpp)
-example(quick_user_guide/constructor_injection_multiple_constructors.cpp)
-example(quick_user_guide/injector_empty.cpp)
-example(quick_user_guide/module.cpp)
-example(quick_user_guide/module_exposed_annotated_type.cpp)
-example(quick_user_guide/module_exposed_many_types.cpp)
-example(quick_user_guide/module_exposed_type.cpp)
-example(quick_user_guide/policies_constructible_global.cpp)
-example(quick_user_guide/policies_print_type_extended.cpp)
-example(quick_user_guide/policies_print_types.cpp)
-example(quick_user_guide/providers_heap_no_throw.cpp)
-example(quick_user_guide/scopes_custom.cpp)
-example(quick_user_guide/scopes_deduce_default.cpp)
-example(quick_user_guide/scopes_instance.cpp)
-example(quick_user_guide/scopes_singleton.cpp)
-example(quick_user_guide/scopes_unique.cpp)
+example(quick_user_guide/annotated_constructor_injection)
+example(quick_user_guide/annotated_constructor_injection_with_constructor_definition)
+example(quick_user_guide/annotated_constructor_injection_with_ctor_traits)
+example(quick_user_guide/annoteded_constructor_injection_with_the_same_names)
+example(quick_user_guide/bind_cross_platform)
+example(quick_user_guide/bind_deduce_type_to_value)
+example(quick_user_guide/bind_interface_to_implementation)
+example(quick_user_guide/bind_multiple_interfaces)
+example(quick_user_guide/bind_type_to_compile_time_value)
+example(quick_user_guide/bind_type_to_value)
+example(quick_user_guide/constructor_injection_aggregate)
+example(quick_user_guide/constructor_injection_ambigious_constructors_via_ctor_traits)
+example(quick_user_guide/constructor_injection_ambigious_constructors_via_inject)
+example(quick_user_guide/constructor_injection_ambigious_constructors_via_inject_traits)
+example(quick_user_guide/constructor_injection_direct)
+example(quick_user_guide/constructor_injection_multiple_constructors)
+example(quick_user_guide/injector_empty)
+example(quick_user_guide/module)
+example(quick_user_guide/module_exposed_annotated_type)
+example(quick_user_guide/module_exposed_many_types)
+example(quick_user_guide/module_exposed_type)
+example(quick_user_guide/policies_constructible_global)
+example(quick_user_guide/policies_print_type_extended)
+example(quick_user_guide/policies_print_types)
+example(quick_user_guide/providers_heap_no_throw)
+example(quick_user_guide/scopes_custom)
+example(quick_user_guide/scopes_deduce_default)
+example(quick_user_guide/scopes_instance)
+example(quick_user_guide/scopes_singleton)
+example(quick_user_guide/scopes_unique)
