--- a/.travis.yml
+++ b/.travis.yml
@@ -180,15 +180,15 @@ script:
   - if [ "${CHECK}" != "" ]; then (travis_wait make check); fi
   - if [ "${TRAVIS_BRANCH}" == "cpp14" ] && [ "${DOCUMENTATION}" != "" ]; then (
     pip install --user travis https://github.com/mkdocs/mkdocs/archive/0.15.0.zip
-    && make doc && git clone https://github.com/boost-experimental/di.git
+    && make doc && git clone https://github.com/boost-experimental/di
     && cd di && git checkout -b gh-pages -t origin/gh-pages && git reset --hard
     && rm -rf cpp14/boost/libs/di/doc/html/* && cp -r ../doc/site/* cpp14/boost/libs/di/doc/html
     && git add -A . && git commit -am "doc update" && git push --force --quiet
-    "https://${GH_TOKEN}@github.com/boost-experimental/msm-lite.git"); fi
+    "https://${GH_TOKEN}@github.com/boost-experimental/di"); fi
 
 after_success:
   - if [ "${TRAVIS_BRANCH}" == "cpp14" ] && [ "${BENCHMARK}" != "" ]; then (
-    git clone https://github.com/boost-experimental/di.git benchmarks
+    git clone https://github.com/boost-experimental/di benchmarks
     && cd benchmarks && git checkout -b benchmarks -t origin/benchmarks
     && find ../build/test ../test -iname "*.json" | xargs -I% cp % . && git add -A . && git commit -am "update"
     && git push --force --quiet "https://${GH_TOKEN}@github.com/boost-experimental/di"); fi
