--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -8,6 +8,7 @@ repo_name: di
 docs_dir: .
 use_directory_urls: false
 theme_dir: boost
+disqus: boost-di
 #google_analytics: ['UA-73083568-1', 'boost-experimental.github.io/msm-lite']
 extra_javascript: []
 extra_css: []
