[user guide] more examples

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -38,35 +38,41 @@ example(performance/create_named_type)
 example(performance/create_type_with_bound_instance)
 example(performance/create_type_without_bindings)
 
-example(quick_user_guide/annotated_constructor_injection)
-example(quick_user_guide/annotated_constructor_injection_with_constructor_definition)
-example(quick_user_guide/annotated_constructor_injection_with_ctor_traits)
-example(quick_user_guide/annoteded_constructor_injection_with_the_same_names)
-example(quick_user_guide/bind_cross_platform)
-example(quick_user_guide/bind_deduce_type_to_value)
-example(quick_user_guide/bind_interface_to_implementation)
-example(quick_user_guide/bind_multiple_interfaces)
-example(quick_user_guide/bind_type_to_compile_time_value)
-example(quick_user_guide/bind_type_to_value)
-example(quick_user_guide/constructor_injection_aggregate)
-example(quick_user_guide/constructor_injection_ambigious_constructors_via_BOOST_DI_INJECT)
-example(quick_user_guide/constructor_injection_ambigious_constructors_via_BOOST_DI_INJECT_TRAITS)
-example(quick_user_guide/constructor_injection_ambigious_constructors_via_ctor_traits)
-example(quick_user_guide/constructor_injection_ambigious_constructors_via_inject)
-example(quick_user_guide/constructor_injection_ambigious_constructors_via_vaargs)
-example(quick_user_guide/constructor_injection_direct)
-example(quick_user_guide/constructor_injection_multiple_constructors)
-example(quick_user_guide/injector_empty)
-example(quick_user_guide/module)
-example(quick_user_guide/module_exposed_annotated_type)
-example(quick_user_guide/module_exposed_many_types)
-example(quick_user_guide/module_exposed_type)
-example(quick_user_guide/policies_constructible_global)
-example(quick_user_guide/policies_print_type_extended)
-example(quick_user_guide/policies_print_types)
-example(quick_user_guide/providers_heap_no_throw)
-example(quick_user_guide/scopes_custom)
-example(quick_user_guide/scopes_deduce_default)
-example(quick_user_guide/scopes_instance)
-example(quick_user_guide/scopes_singleton)
-example(quick_user_guide/scopes_unique)
+example(user_guide/annotated_constructor_injection)
+example(user_guide/annotated_constructor_injection_with_constructor_definition)
+example(user_guide/annotated_constructor_injection_with_ctor_traits)
+example(user_guide/annoteded_constructor_injection_with_the_same_names)
+example(user_guide/bind_cross_platform)
+example(user_guide/bind_deduce_type_to_value)
+example(user_guide/bind_interface_to_implementation)
+example(user_guide/bind_multiple_interfaces)
+example(user_guide/bind_type_override)
+example(user_guide/bind_type_to_compile_time_value)
+example(user_guide/constructor_injection_aggregate)
+example(user_guide/constructor_injection_ambigious_constructors_via_BOOST_DI_INJECT)
+example(user_guide/constructor_injection_ambigious_constructors_via_BOOST_DI_INJECT_TRAITS)
+example(user_guide/constructor_injection_ambigious_constructors_via_ctor_traits)
+example(user_guide/constructor_injection_ambigious_constructors_via_inject)
+example(user_guide/constructor_injection_ambigious_constructors_via_vaargs)
+example(user_guide/constructor_injection_default_values)
+example(user_guide/constructor_injection_direct)
+example(user_guide/constructor_injection_long_parameter_list)
+example(user_guide/constructor_injection_multiple_constructors)
+example(user_guide/injector_empty)
+example(user_guide/module)
+example(user_guide/module_exposed_annotated_type)
+example(user_guide/module_exposed_complex_types)
+example(user_guide/module_exposed_many_types)
+example(user_guide/module_exposed_type)
+example(user_guide/policies_constructible_global)
+example(user_guide/policies_constructible_local)
+example(user_guide/policies_print_type_extended)
+example(user_guide/policies_print_types)
+example(user_guide/providers_heap)
+example(user_guide/providers_heap_no_throw)
+example(user_guide/providers_stack_over_heap)
+example(user_guide/scopes_custom)
+example(user_guide/scopes_deduce_default)
+example(user_guide/scopes_instance)
+example(user_guide/scopes_singleton)
+example(user_guide/scopes_unique)
