[user guide] missing bind type to value

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -48,6 +48,7 @@ example(user_guide/bind_interface_to_implementation)
 example(user_guide/bind_multiple_interfaces)
 example(user_guide/bind_type_override)
 example(user_guide/bind_type_to_compile_time_value)
+example(user_guide/bind_type_to_value)
 example(user_guide/constructor_injection_aggregate)
 example(user_guide/constructor_injection_ambigious_constructors_via_BOOST_DI_INJECT)
 example(user_guide/constructor_injection_ambigious_constructors_via_BOOST_DI_INJECT_TRAITS)
