--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -9,7 +9,7 @@ docs_dir: .
 use_directory_urls: false
 theme_dir: boost
 disqus: boost-di
-#google_analytics: ['UA-73083568-1', 'auto']
+google_analytics: ['UA-73083568-1', 'auto']
 extra_javascript: []
 extra_css: []
 
