--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,6 +4,8 @@
 # Distributed under the Boost Software License, Version 1.0.
 # (See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
 #
+clone_folder: c:\
+
 branches:
   except:
     - gh-pages
@@ -33,4 +35,3 @@ install:
 
 build_script:
   - mingw32-make all
-
