[doc] user guide bindings

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -53,7 +53,10 @@ example(user_guide/annotated_constructor_injection_with_ctor_traits)
 example(user_guide/annotated_constructor_injection_with_the_same_names)
 example(user_guide/bind_cross_platform)
 example(user_guide/bind_deduce_type_to_value)
+example(user_guide/bind_dynamic_bindings)
 example(user_guide/bind_interface_to_implementation)
+example(user_guide/bind_multiple_bindings)
+example(user_guide/bind_multiple_bindings_initializer_list)
 example(user_guide/bind_multiple_interfaces)
 example(user_guide/bind_type_override)
 example(user_guide/bind_type_to_compile_time_value)
