--- a/.travis.yml
+++ b/.travis.yml
@@ -182,8 +182,9 @@ script:
     pip install --user travis https://github.com/mkdocs/mkdocs/archive/0.15.3.zip
     && git clone https://github.com/boost-experimental/di
     && cd di && git checkout -b gh-pages -t origin/gh-pages && git reset --hard && rm -rf * && cd ..
-    && MKDOCS_THEME=boost-experimental MKDOCS_SITE=di make doc
-    && MKDOCS_THEME=boost MKDOCS_SITE=di/boost make doc readme
+    && mkdocs --version
+    && MKDOCS_THEME=themes/boost-experimental MKDOCS_SITE=di make doc
+    && MKDOCS_THEME=themes/boost MKDOCS_SITE=di/boost make doc readme
     && cd di && git add -A . && git commit -am "doc update"
     && git push --force --quiet "https://${GH_TOKEN}@github.com/boost-experimental/di"); fi
 
