--- a/.travis.yml
+++ b/.travis.yml
@@ -179,10 +179,9 @@ script:
   - if [ "${CXX}" != "" ]; then (travis_wait make all); fi
   - if [ "${CHECK}" != "" ]; then (travis_wait make check); fi
   - if [ "${TRAVIS_BRANCH}" == "cpp14" ] && [ "${DOCUMENTATION}" != "" ]; then (
-    pip install --user travis https://github.com/mkdocs/mkdocs/archive/0.15.3.zip
+    pip install --user travis https://github.com/mkdocs/mkdocs/archive/master.zip
     && git clone https://github.com/boost-experimental/di
     && cd di && git checkout -b gh-pages -t origin/gh-pages && git reset --hard && rm -rf * && cd ..
-    && mkdocs --version
     && MKDOCS_THEME=themes/boost-experimental MKDOCS_SITE=di make doc
     && MKDOCS_THEME=themes/boost MKDOCS_SITE=di/boost make doc readme
     && cd di && git add -A . && git commit -am "doc update"
