[doc] boost theme

--- a/.travis.yml
+++ b/.travis.yml
@@ -182,8 +182,9 @@ script:
     pip install --user travis https://github.com/mkdocs/mkdocs/archive/b30f38fe299738e8ce614e53c3342cc8bef02b5b.zip --upgrade
     && git clone https://github.com/boost-experimental/di && cd di && rm -rf *
     && git checkout -b gh-pages -t origin/gh-pages && git reset --hard && cd ..
-    && MKDOCS_THEME=themes/boost-experimental MKDOCS_SITE=../di make doc
-    && MKDOCS_THEME=themes/boost MKDOCS_SITE=../di/boost make doc readme
+    && MKDOCS_THEME=boost-experimental MKDOCS_SITE=../di make doc
+    && MKDOCS_THEME=boost-modern MKDOCS_SITE=../di/boost-modern make doc
+    && MKDOCS_THEME=boost MKDOCS_SITE=../di/boost make doc readme
     && cd di && git add -A . && git commit -am "doc update"
     && git push --force --quiet "https://${GH_TOKEN}@github.com/boost-experimental/di"); fi
 
