--- a/.travis.yml
+++ b/.travis.yml
@@ -153,10 +153,16 @@ matrix:
     osx_image: xcode7.1
     env: BS=bjam BENCHMARK=ON CXX=clang++
   - os: osx
-    osx_image: xcode7.2b1
+    osx_image: xcode7.2
     env: BS=bjam TOOLSET=clang CXX=clang++
   - os: osx
-    osx_image: xcode7.2b1
+    osx_image: xcode7.2
+    env: BS=cmake BENCHMARK=ON CXX=clang++
+  - os: osx
+    osx_image: xcode7.3
+    env: BS=bjam TOOLSET=clang CXX=clang++
+  - os: osx
+    osx_image: xcode7.3
     env: BS=cmake BENCHMARK=ON CXX=clang++
 
 before_install:
