[doc] try it [msvc] fix for contextual bindings

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -29,6 +29,7 @@ example(multiple_bindings)
 example(multiple_interfaces)
 example(pool_provider)
 example(scopes)
+example(try_it)
 
 example(performance/create_bound_interface)
 example(performance/create_bound_interface_via_exposed_module)
