--- a/boost/mkdocs.yml
+++ b/boost/mkdocs.yml
@@ -17,9 +17,10 @@ pages:
 - Overview: overview.md
 - Benchmarks: benchmarks.md
 - Tutorial: tutorial.md
+- Try It!: try_it.md
 - User Guide: user_guide.md
 - Examples: examples.md
 - Extensions: extensions.md
-- CHANGELOG: CHANGELOG.md
 - FAQ: FAQ.md
+- CHANGELOG: CHANGELOG.md
 - TODO: TODO.md
