[travis] clang-3.8 precise

--- a/.travis.yml
+++ b/.travis.yml
@@ -91,19 +91,19 @@ matrix:
     addons:
       apt:
         packages: ["clang-3.8", "libstdc++-5-dev", "valgrind", "gdb"]
-        sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise"]
+        sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise-3.8"]
   - os: linux
     env: BS=bjam TOOLSET=clang MEMCHECK=VALGRIND LIBCXX=ON CXX=clang++-3.8
     addons:
       apt:
         packages: ["clang-3.8", "libstdc++-5-dev", "valgrind", "gdb"]
-        sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise"]
+        sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise-3.8"]
   - os: linux
     env: BS=cmake CXX=clang++-3.8
     addons:
       apt:
         packages: ["clang-3.8", "libstdc++-5-dev", "gdb"]
-        sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise"]
+        sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise-3.8"]
   - os: linux
     env: BS=bjam TOOLSET=gcc GCOV=gcov-5 VARIANT=coverage MEMCHECK=VALGRIND CXX=g++-5
     addons:
