--- a/extension/CMakeLists.txt
+++ b/extension/CMakeLists.txt
@@ -16,6 +16,7 @@ extension(injections/assisted_injection)
 extension(injections/lazy)
 extension(injections/named_parameters)
 extension(injections/xml_injection)
+extension(policies/serialize)
 extension(policies/types_dumper)
 extension(policies/uml_dumper)
 extension(providers/mocks_provider)
