--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -25,6 +25,7 @@ example(dynamic_bindings)
 example(fwd_bindings)
 example(hello_world)
 example(modules)
+example(motivation)
 example(multiple_bindings)
 example(multiple_interfaces)
 example(pool_provider)
