--- a/benchmark/Makefile
+++ b/benchmark/Makefile
@@ -1,6 +1,11 @@
 FRAMEWORKS:=frameworks
+PYTHON:=python
+CXX?=clang++
+JAVA?=java
+JAVAC?=javac
+SC?=mcs
 
-all: benchmark_unique benchmark_shared
+all: benchmark_unique
 
 install_fruit:
 	@-mkdir -p $(FRAMEWORKS) 2>/dev/null
@@ -17,62 +22,54 @@ install_hypodermic:
 
 install: install_di install_fruit
 
-benchmark_shared:
-	@make CXX=clang++ TYPES=128 CTOR_ARGS=2 ITERATIONS=1000000 TEST=shared benchmark
-	@make CXX=g++ TYPES=128 CTOR_ARGS=2 ITERATIONS=1000000 TEST=shared benchmark
-	@make CXX=clang++ TYPES=256 CTOR_ARGS=2 ITERATIONS=1000 TEST=shared benchmark
-	@make CXX=g++ TYPES=256 CTOR_ARGS=2 ITERATIONS=1000 TEST=shared benchmark
-	@make CXX=clang++ TYPES=512 CTOR_ARGS=2 ITERATIONS=1000 TEST=shared benchmark
-	@make CXX=g++ TYPES=512 CTOR_ARGS=2 ITERATIONS=1000 TEST=shared benchmark
-	@make CXX=clang++ TYPES=1024 CTOR_ARGS=2 ITERATIONS=1000 TEST=shared benchmark
-	@make CXX=g++ TYPES=1024 CTOR_ARGS=2 ITERATIONS=1000 TEST=shared benchmark
-
 benchmark_unique:
-	@make CXX=clang++ TYPES=128 CTOR_ARGS=2 ITERATIONS=1000000 TEST=unique benchmark
-	@make CXX=g++ TYPES=128 CTOR_ARGS=2 ITERATIONS=1000000 TEST=unique benchmark
-	@make CXX=clang++ TYPES=256 CTOR_ARGS=2 ITERATIONS=1000 TEST=unique benchmark
-	@make CXX=g++ TYPES=256 CTOR_ARGS=2 ITERATIONS=1000 TEST=unique benchmark
-	@make CXX=clang++ TYPES=512 CTOR_ARGS=2 ITERATIONS=1000 TEST=unique benchmark
-	@make CXX=g++ TYPES=512 CTOR_ARGS=2 ITERATIONS=1000 TEST=unique benchmark
-	@make CXX=clang++ TYPES=1024 CTOR_ARGS=2 ITERATIONS=1000 TEST=unique benchmark
-	@make CXX=g++ TYPES=1024 CTOR_ARGS=2 ITERATIONS=1000 TEST=unique benchmark
+	@make CXX=clang++ JAVA=java JAVAC=javac SC=mcs TYPES=128 CTOR_ARGS=4 ITERATIONS=1024 TEST=unique benchmark
 
 benchmark:
 	@echo "--------------"
 	@echo BENCHMARK: TYPES=$(TYPES) CTOR_ARGS=$(CTOR_ARGS) ITERATIONS=$(ITERATIONS) TEST=$(TEST)
 	@echo "--------------"
-	@-rm -rf tmp 2>/dev/null
-	@mkdir tmp && cd tmp && python ../generate_test.py
-	@make run_base run_di run_fruit run_hypodermic -j1
-	@rm -rf tmp
+	@make base di fruit guice dagger2 ninject -j1
 
-run_base:
+gen_%:
 	@echo "--------------"
-	@echo base
+	@echo $*
 	@echo "--------------"
-	cd tmp && time $(CXX) -DCHECK_COMPILE_TIME base.cpp -std=c++11 -O2 -I..
-	cd tmp && $(CXX) base.cpp -std=c++11 -O2 -I.. -o base.out && strip base.out && ls -lh base.out && ./base.out
+	@rm -rf .$*
+	@mkdir .$* && cd .$* && FRAMEWORK=$* $(PYTHON) ../generate_test.py
 
-run_di:
-	@echo "--------------"
-	@echo di
-	@echo "--------------"
-	cd tmp && time $(CXX) -DCHECK_COMPILE_TIME di.cpp -std=c++1y -O2 -I.. -I ../$(FRAMEWORKS)/di/include
-	cd tmp && $(CXX) di.cpp -std=c++1y -O2 -I.. -I ../$(FRAMEWORKS)/di/include -o di.out && strip di.out && ls -lh di.out && ./di.out
+base: gen_base
+	cd .base && time $(CXX) base.cpp -std=c++11 -O2 -I.. -o base.out
+	cd .base && strip base.out && ls -lh base.out
+	cd .base && time ./base.out
 
-run_fruit:
-	@echo "--------------"
-	@echo fruit
-	@echo "--------------"
-	cd tmp && time $(CXX) -DCHECK_COMPILE_TIME -DFRUIT_NO_LOOP_CHECK fruit.cpp -std=c++11 -O2 -I.. -I ../$(FRAMEWORKS)/fruit/include -I ../$(FRAMEWORKS)/fruit/build/include -L ../$(FRAMEWORKS)/fruit/build/src -lfruit
-	cd tmp && time $(CXX) -DFRUIT_NO_LOOP_CHECK fruit.cpp -std=c++11 -O2 -I.. -I ../$(FRAMEWORKS)/fruit/include -I ../$(FRAMEWORKS)/fruit/build/include -L ../$(FRAMEWORKS)/fruit/build/src -lfruit -o fruit.out && strip fruit.out && ls -lh fruit.out && LD_LIBRARY_PATH=../$(FRAMEWORKS)/fruit/build/src ./fruit.out
+di: gen_di
+	cd .di && time $(CXX) di.cpp -std=c++1y -O2 -I.. -I ../$(FRAMEWORKS)/di/include -o di.out
+	cd .di && strip di.out && ls -lh di.out
+	cd .di && time ./di.out
 
-run_hypodermic:
-	@echo "--------------"
-	@echo hypodermic
-	@echo "--------------"
-	cd tmp && time $(CXX) -DCHECK_COMPILE_TIME hypodermic.cpp -std=c++11 -O2 -I.. -I ../$(FRAMEWORKS)/hypodermic
-	cd tmp && time $(CXX) hypodermic.cpp -std=c++11 -O2 -I.. -I ../$(FRAMEWORKS)/hypodermic -o hypodermic.out && strip hypodermic.out && ls -lh hypodermic.out && ./hypodermic.out
+fruit: gen_fruit
+	cd .fruit && time $(CXX) -DFRUIT_NO_LOOP_CHECK fruit.cpp -std=c++11 -O2 -I.. -I ../$(FRAMEWORKS)/fruit/include -I ../$(FRAMEWORKS)/fruit/build/include -L ../$(FRAMEWORKS)/fruit/build/src -lfruit -o fruit.out
+	cd .fruit strip fruit.out && ls -lh fruit.out
+	cd .fruit && time LD_LIBRARY_PATH=../$(FRAMEWORKS)/fruit/build/src ./fruit.out
+
+hypodermic: gen_hypodermic
+	cd .hypodermic && time $(CXX) hypodermic.cpp -std=c++11 -O2 -I.. -I ../$(FRAMEWORKS)/hypodermic -o hypodermic.out
+	cd .hypodermic && strip hypodermic.out && ls -lh hypodermic.out
+	cd .hypodermic && time ./hypodermic.out
+
+guice: gen_guice
+	cd .guice && time $(JAVAC) -cp .:`ls ~/di_frameworks/frameworks/google.guice/*.jar| xargs | tr ' ' ':'` guice.java
+	cd .guice && time $(JAVA) -cp .:`ls ~/di_frameworks/frameworks/google.guice/*.jar| xargs | tr ' ' ':'` guice
+
+dagger2: gen_dagger2
+	cd .dagger2 && time $(JAVAC) -cp .:`ls ~/di_frameworks/frameworks/dagger2/*.jar| xargs | tr ' ' ':'` dagger2.java
+	cd .dagger2 && time $(JAVA) -cp .:`ls ~/di_frameworks/frameworks/dagger2/*.jar| xargs | tr ' ' ':'` dagger2
+
+ninject: gen_ninject
+	cd .ninject && cp /Users/krzysztof.jusiak/di_frameworks/frameworks/ninject/Ninject.dll .
+	cd .ninject && time $(SC) /r:Ninject.dll ninject.cs
+	cd .ninject && time mono ./ninject.exe
 
 clean:
 	@rm -rf $(FRAMEWORKS)
